--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint src/*.js",
-    "start": "webpack -w -d",
+    "build": "webpack -w -d",
+    "start":"npm run eslint && webpack && http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
