--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "eslint src/*.js",
     "build": "webpack -w -d",
     "start":"npm run eslint && webpack && http-server",
+    "hot" :"webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
