--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
     "http-server": "latest",
+    "jsdom": "^9.2.0",
+    "mocha-jsdom": "^1.1.0",
     "sinon": "^1.17.4",
     "webpack": "latest",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "mocha": "^2.4.5"
   }
 }
